# prom-mock-rs

./: Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
proto/: remote.proto
scripts/: example.sh  test_api.sh  test_simple.sh
src/: fixtures.rs  lib.rs  matchers.rs  query_engine.rs  timeutil.rs
src/http/: mod.rs  routes.rs  state.rs  types.rs
src/http/handlers/: fixtures.rs  health.rs  metadata.rs  mod.rs  query.rs  remote_write.rs
src/storage/: memory.rs  mod.rs
tests/: fixtures.yaml
