[package]
name = "prom-mock-rs"
version = "0.1.0"
edition = "2021"
authors = ["dsemak"]
description = "A mock Prometheus HTTP API server for integration testing"
license = "MIT"
repository = "https://github.com/dsemak/prom-mock-rs"
keywords = ["prometheus", "mock", "testing", "metrics"]
categories = ["development-tools::testing"]

[dependencies]
# External crates
axum = "0.8.4"
bytes = "1.4"
clap = { version = "4", features = ["derive"] }
fnv = "1.0"
humantime = "2.1"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
prost-build = "0.12"

[lib]
name = "prom_mock_rs"
path = "src/lib.rs"

[[bin]]
name = "prom-mock"
path = "src/bin/prom-mock/main.rs"
